# c_static_server

./: CMakeLists.txt  README.md  index.html  static_server.c  static_server_epoll.c
